--- a/euler.html
+++ b/euler.html
@@ -216,7 +216,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <a href="home.html" class="back-btn">🏠 Home</a>
+            <a href="index.html" class="back-btn">🏠 Home</a>
             <h1>📈 Euler's Method</h1>
         </div>
 
