--- a/gauss.html
+++ b/gauss.html
@@ -202,7 +202,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <a href="home.html" class="back-btn">🏠 Home</a>
+            <a href="index.html" class="back-btn">🏠 Home</a>
             <h1>📊 Gauss Elimination Method</h1>
         </div>
 
