--- a/simpson.html
+++ b/simpson.html
@@ -468,7 +468,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <a href="home.html" class="back-btn">🏠 Home</a>
+            <a href="index.html" class="back-btn">🏠 Home</a>
             <h1>📐 Simpson's 1/3 Rule</h1>
         </div>
 
